--- a/assets/stylesheets/global-style.css
+++ b/assets/stylesheets/global-style.css
@@ -31,6 +31,15 @@ nav ul{
     justify-content: center;
     align-items: center;
 }
+
+#message{
+    font-weight: bold;
+    border:1px solid rgb(241, 193, 0);
+    border-radius: 5px;
+    padding: 1rem;
+    background-color: rgba(255, 255, 0, 0.748);
+}
+
 /*FOOTER*/
 footer{
     width: 100%;
