--- a/assets/stylesheets/global-style.css
+++ b/assets/stylesheets/global-style.css
@@ -41,6 +41,25 @@ nav ul{
     background-color: rgba(255, 255, 0, 0.748);
 }
 
+#ok{
+    font-weight: bold;
+    border:1px solid rgb(16, 241, 0);
+    border-radius: 5px;
+    padding: 1rem;
+    background-color: rgba(16, 241, 0, 0.523);
+}
+
+#warning{
+    font-weight: bold;
+    border:1px solid rgb(241, 157, 0);
+    border-radius: 5px;
+    padding: 1rem;
+    background-color: rgba(241, 157, 0, 0.491);
+}
+
+
+
+
 /*FOOTER*/
 footer{
     width: 100%;
